--- a/project1/index.html
+++ b/project1/index.html
@@ -8,7 +8,7 @@
   <script src="https://cdn.jsdelivr.net/npm/p5@1.9.2/lib/p5.min.js"></script>
 </head>
 <body>
-  <div class="wrap"><h1>과제 1 – 추상화</h1><p>키: S=PNG, G=GIF, R=재구성, P=팔레트</p></div>
+  <div class="wrap"><h1>과제 1 – 추상화</h1></div>
   <script src="sketch.js"></script>
 </body>
 </html>
