--- a/project2/index.html
+++ b/project2/index.html
@@ -8,7 +8,7 @@
   <script src="https://cdn.jsdelivr.net/npm/p5@1.9.2/lib/p5.min.js"></script>
 </head>
 <body>
-  <div class="wrap"><h1>과제 2 – 캐리커처</h1><p>G/H/E/M 토글 · S=PNG</p></div>
+  <div class="wrap"><h1>과제 2 – 캐리커처</h1></div>
   <script src="sketch.js"></script>
 </body>
 </html>
