--- a/index.html
+++ b/index.html
@@ -15,23 +15,23 @@
   <main id="projects">
     <div class="row">
       <a class="card" href="project1/index.html">
-        <h2>① 과제 1: 추상화(정적/애니)</h2>
+        <h2>① 과제 1: 추상화를 그려보자.</h2>
         <p>기본 도형·색·레이어로 만든 추상 미술</p>
       </a>
       <a class="card" href="project4/index.html">
-        <h2>④ 과제 4</h2>
-        <p>과제 4 설명 요약</p>
+        <h2>④ 과제 4: 자신이 만든 아트 작품에 시간에 따른 움직임을 부여하자.</h2>
+        <p>기본 도형·색·레이어로 만든 움직이는 추상 미술</p>
       </a>
     </div>
 
     <div class="row">
       <a class="card" href="project2/index.html">
-        <h2>② 과제 2: 캐리커처</h2>
+        <h2>② 과제 2: 자신의 캐리커처를 그려보자.</h2>
         <p>기본 도형(ellipse/rect/line/arc)만으로 나를 표현</p>
       </a>
       <a class="card" href="project3/index.html">
-        <h2>③ 과제 3</h2>
-        <p>과제 3 설명 요약</p>
+        <h2>과제 3: 자신의 캐리커쳐에게 움직임을 부여하자</h2>
+        <p>기본 도형(ellipse/rect/line/arc)만으로 움직이는 나를 표현</p>
       </a>
     </div>
   </main>
