--- a/project3/index.html
+++ b/project3/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>과제 3 - 움직이는 추상화</title>
+  <title>과제 3 – 움직이는 캐리커처</title>
   <style>body{margin:0;display:grid;place-items:center;background:#0f1115;color:#eaeef2} .wrap{padding:16px;text-align:center}</style>
   <script src="https://cdn.jsdelivr.net/npm/p5@1.9.2/lib/p5.min.js"></script>
 </head>
 <body>
-  <div class="wrap"><h1>과제 3 - 움직이는 추상화</h1></div>
+  <div class="wrap"><h1>과제 3 – 움직이는 캐리커처</h1></div>
   <script src="sketch.js"></script>
 </body>
 </html>
